--- a/FlockOfBoids/data/config.json
+++ b/FlockOfBoids/data/config.json
@@ -1,16 +1,16 @@
 {
   "eye": {
     "orientation": [
-      0.03256230428814888,
-      0.09082769602537155,
-      -0.39186757802963257,
-      0.9149479866027832
+      0,
+      0,
+      0,
+      1
     ],
-    "magnitude": 1,
+    "magnitude": 0.5773502588272095,
     "position": [
-      1014.9608764648438,
-      596.698486328125,
-      167.90093994140625
+      640,
+      360,
+      1886.4425048828125
     ]
   },
   "radius": 793.2212524414062,
