--- a/FlockOfBoids/data/config.json
+++ b/FlockOfBoids/data/config.json
@@ -1,16 +1,16 @@
 {
   "eye": {
     "orientation": [
-      0,
-      0,
-      0,
-      1
+      0.5999804735183716,
+      -0.7913331985473633,
+      -0.03294304013252258,
+      -0.11282779276371002
     ],
-    "magnitude": 0.5773502588272095,
+    "magnitude": 1,
     "position": [
-      640,
-      360,
-      1886.4425048828125
+      -5.233318328857422,
+      428.7727355957031,
+      185.5469512939453
     ]
   },
   "radius": 793.2212524414062,
