--- a/FlockOfBoids/data/config.json
+++ b/FlockOfBoids/data/config.json
@@ -1,16 +1,16 @@
 {
   "eye": {
     "orientation": [
-      0,
-      0,
-      0,
-      1
+      0.14257431030273438,
+      -0.7297888994216919,
+      -0.08474031835794449,
+      -0.6632494926452637
     ],
-    "magnitude": 0.5773502588272095,
+    "magnitude": 1,
     "position": [
-      640,
-      360,
-      1886.4425048828125
+      399.3633117675781,
+      137.08889770507812,
+      315.7359619140625
     ]
   },
   "radius": 793.2212524414062,
