--- a/FlockOfBoids/data/config.json
+++ b/FlockOfBoids/data/config.json
@@ -1,16 +1,16 @@
 {
   "eye": {
     "orientation": [
-      0.1318947672843933,
-      -0.7864546775817871,
-      -0.5580624341964722,
-      -0.22947581112384796
+      0,
+      0,
+      0,
+      1
     ],
-    "magnitude": 1,
+    "magnitude": 0.5773502588272095,
     "position": [
-      341.8475341796875,
-      343.89984130859375,
-      190.68983459472656
+      640,
+      360,
+      1886.4425048828125
     ]
   },
   "radius": 793.2212524414062,
