--- a/FlockOfBoids/data/config.json
+++ b/FlockOfBoids/data/config.json
@@ -1,16 +1,16 @@
 {
   "eye": {
     "orientation": [
-      0,
-      0,
-      0,
-      1
+      -0.46479061245918274,
+      0.646386444568634,
+      0.5316991806030273,
+      -0.28887784481048584
     ],
-    "magnitude": 0.5773502588272095,
+    "magnitude": 1,
     "position": [
-      640,
-      360,
-      1886.4425048828125
+      22.008544921875,
+      658.332763671875,
+      109.3189697265625
     ]
   },
   "radius": 793.2212524414062,
