--- a/FlockOfBoids/data/config.json
+++ b/FlockOfBoids/data/config.json
@@ -1,16 +1,16 @@
 {
   "eye": {
     "orientation": [
-      -0.14117848873138428,
-      -0.7847987413406372,
-      -0.43070507049560547,
-      -0.4226734936237335
+      0,
+      0,
+      0,
+      1
     ],
-    "magnitude": 1,
+    "magnitude": 0.5773502588272095,
     "position": [
-      742.3663330078125,
-      409.4984130859375,
-      119.3307113647461
+      640,
+      360,
+      1886.4425048828125
     ]
   },
   "radius": 793.2212524414062,
