--- a/FlockOfBoids/data/config.json
+++ b/FlockOfBoids/data/config.json
@@ -1,16 +1,16 @@
 {
   "eye": {
     "orientation": [
-      0,
-      0,
-      0,
-      1
+      -0.0531185045838356,
+      0.24990957975387573,
+      0.14442458748817444,
+      0.9559629559516907
     ],
-    "magnitude": 0.5773502588272095,
+    "magnitude": 1,
     "position": [
-      640,
-      360,
-      1886.4425048828125
+      1158.786376953125,
+      554.9042358398438,
+      1275.332275390625
     ]
   },
   "radius": 793.2212524414062,
